<?xml version="1.0"?>
<package format="2">
  <name>simulation_msgs</name>
  <version>0.0.0</version>
  <description>Messages used to connect ROS with the Unity simulation</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="labeca@todo.todo">Milena Mariz</maintainer>
  <maintainer email="labeca@todo.todo">Thiago Gláuber</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
